@@ -1,16 +1,16 @@
 [fs-uae-controller]
-name = Xbox 360 Wired Controller
-platform = macosx
+name = Logitech Gamepad F310
+platform = linux
 
 [device]
-make = Microsoft
-model = Xbox 360/One Pad
+make = Logitech
+model = F310
 type = gamepad
 
 [sdl]
-guid = 5e040000000000008e02000000000000
-buttons = 16
-hats = 0
+guid = 030000006d0400001dc2000014400000
+buttons = 11
+hats = 1
 axes = 6
 balls = 0
 
@@ -28,17 +28,15 @@ axis_4_pos = rstick_down
 axis_5_pos = right_trigger
 button_0 = south_button
 button_1 = east_button
-button_10 = menu_button
-button_11 = dpad_up
-button_12 = dpad_down
-button_13 = dpad_left
-button_14 = dpad_right
-button_15 = menu_button
+button_10 = rstick_button
 button_2 = west_button
 button_3 = north_button
 button_4 = left_shoulder
 button_5 = right_shoulder
-button_6 = lstick_button
-button_7 = rstick_button
-button_8 = start_button
-button_9 = select_button
+button_6 = select_button
+button_7 = start_button
+button_9 = lstick_button
+hat_0_down = dpad_down
+hat_0_left = dpad_left
+hat_0_right = dpad_right
+hat_0_up = dpad_up
