@@ -3,13 +3,13 @@ name = Xbox 360 Wired Controller
 platform = macosx
 
 [device]
-make = Microsoft
-model = Xbox 360/One Pad
+make = Logitech
+model = F310
 type = gamepad
 
 [sdl]
-guid = 5e040000000000008e02000000000000
-buttons = 16
+guid = 6d040000000000001dc2000000000000
+buttons = 15
 hats = 0
 axes = 6
 balls = 0
@@ -33,7 +33,6 @@ button_11 = dpad_up
 button_12 = dpad_down
 button_13 = dpad_left
 button_14 = dpad_right
-button_15 = menu_button
 button_2 = west_button
 button_3 = north_button
 button_4 = left_shoulder
