@@ -1,14 +1,14 @@
 [fs-uae-controller]
-name = Logitech Dual Action
-platform = macosx
+name = Thrustmaster dual analog 3.2
+platform = windows
 
 [device]
-make = Logitech
-model = F310
+make = Thrustmaster
+model = Dual Analog 4
 type = gamepad
 
 [sdl]
-guid = 6d0400000000000016c2000000000000
+guid = 4f0415b3000000000000504944564944
 buttons = 12
 hats = 1
 axes = 4
@@ -24,15 +24,15 @@ axis_2_neg = rstick_left
 axis_2_pos = rstick_right
 axis_3_neg = rstick_up
 axis_3_pos = rstick_down
-button_0 = west_button
-button_1 = south_button
+button_0 = south_button
+button_1 = west_button
 button_10 = lstick_button
 button_11 = rstick_button
 button_2 = east_button
 button_3 = north_button
 button_4 = left_shoulder
-button_5 = right_shoulder
-button_6 = left_trigger
+button_5 = left_trigger
+button_6 = right_shoulder
 button_7 = right_trigger
 button_8 = select_button
 button_9 = start_button
